--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About GS War Wagon — experienced refuse, labour hire and demolition services in the Sea to Sky.">
     <title>About | GS War Wagon</title>
+    <link rel="icon" href="assets/branding/GS Web Icon.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
