--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GS War Wagon Garbage & Refuse LTD — Professional waste management and labor services for Sea to Sky.">
-    <link rel="icon" href="assets/branding/gs-favicon.png" type="image/png">
+    <link rel="icon" href="assets/branding/GS Web Icon.png" type="image/png">
     <title>GS War Wagon | Professional Garbage & Refuse Services</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
