--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GS War Wagon Services — garbage removal, labour hire, snow management, demolition and removals.">
     <title>Services | GS War Wagon</title>
+    <link rel="icon" href="assets/branding/GS Web Icon.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
