--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <a href="services.html" class="service-link">Learn more →</a>
                     </div>
                     <div class="service-card">
-                        <div class="service-icon">💧</div>
+                        <div class="service-icon"><svg width="40" height="40" viewBox="0 0 24 24" fill="#2563eb" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.69l5.66 5.66a8 8 0 1 1-11.32 0z"/></svg></div>
                         <h3>Power Washing</h3>
                         <p>Professional pressure washing for residential and commercial properties.</p>
                         <a href="services.html" class="service-link">Learn more →</a>
